# sys_gpio

./: pyproject.toml  readme.md
ebuild/: metadata.xml  sys_gpio-9999.ebuild
src/sys_gpio/: __init__.py  cli_commands.py  get_pin_val.py  pin.py  pin_server.py
